# KohakuClip

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: build-wheels.yml
examples/: benchmark_kclip_dataloader.py  compare_path_vs_bytes.py  print_video_info.py  range_and_resize.py  save_first_frame.py  torch-dataset.py  torch_dataset_utils.py
src/kclip-rust/: lib.rs
src/kclip-rust/core/: loader.rs  mod.rs  types.rs
src/kclip-rust/py/: mod.rs
src/kohakuclip/: __init__.py  _kclip.pyi  _pipeline.py
tests/: test_kclip.py
