[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "kohakuclip"
version = "0.1.0"
description = "Fast, memory-efficient, stateless video loader (Rust+pyo3+NumPy)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Kohaku" }]
dependencies = [
    "numpy>=1.22",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "maturin[patchelf]>=1.0,<2.0",
    "black>=25.0.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "av>=16.0.0",
    "torch>=2.3.0",
    "psutil>=6.0.0",
    "tqdm>=4.66.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "av>=16.0.0",
    "torch>=2.3.0",
    "psutil>=6.0.0",
    "tqdm>=4.66.0",
]

[tool.maturin]
python-source = "src"
module-name = "kohakuclip._kclip"
# Include Python files in the wheel
include = ["src/kohakuclip/**/*.py", "src/kohakuclip/**/*.pyi", "src/kohakuclip/py.typed"]

# Setuptools configuration for package discovery (helps with editable installs)
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kohakuclip = ["py.typed", "*.pyi", "*.pyd", "*.so", "*.dylib"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=kohakuclip",
    "--cov-report=term-missing",
]
